--- a/src/app/user/components/bills/bills.component.html
+++ b/src/app/user/components/bills/bills.component.html
@@ -5,15 +5,9 @@
   </div>
 </ng-template>
 
-<!-- Initial Loading State -->
-<div *ngIf="isLoading && !initialLoadComplete" class="text-center p-5">
-  <div class="spinner-border text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <p class="mt-3">Loading bills...</p>
-</div>
 
-<div *ngIf="!isInitialEmpty; else noBillsMessage">
+<ng-container *ngIf="initialLoadComplete">
+<ng-container *ngIf="!isInitialEmpty; else noBillsMessage">
   <div class="main-content"></div>
   <div class="header-container d-flex align-items-center">
     <div class="back-btn-container">
@@ -98,4 +92,5 @@
       <span class="visually-hidden">Loading more...</span>
     </div>
   </div>
-</div>
+  </ng-container>
+</ng-container>
